@@ -17,6 +17,8 @@
 ** Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 **/
 
+#include <math.h>
+
 #include "common.h"
 #include "log.h"
 #include "mutexs.h"
@@ -1101,8 +1103,7 @@ int	zbx_procstat_get_util(const char *procname, const char *username, const char
 
 	/* 1e9 (nanoseconds) * 1e2 (percent) * 1e1 (one digit decimal place) */
 	ticks_diff *= __UINT64_C(1000000000000);
-	ticks_diff /= time_diff * sysconf(_SC_CLK_TCK);
-	*value = (double)ticks_diff / 10;
+	*value = round((double)ticks_diff / (time_diff * sysconf(_SC_CLK_TCK))) / 10;
 
 	ret = SUCCEED;
 out:
